--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.swp
 *.log
 *.*~
+*.s
+*.out
 glue_data/
 user_config.sh
 .idea
@@ -16,3 +18,5 @@ dist/
 *.egg-info/
 *.egg
 pip-wheel-metadata/
+
+
